Fix scrollbar appearing due to padding on h2

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -4,5 +4,5 @@
  * Tutorial section: B03
  */
 .Chat {
-  height: calc(100% - 46px);
+  height: calc(100% - 54px);
 }
